notejam-app/notejam-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notejam-app-deployment
  namespace: notejam
  labels:
    app: notejam-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notejam-app
  template:
    metadata:
      labels:
        app: notejam-app
    spec:
      containers:
      - name: notejam-app
        image: swapxs/notejam-xs
        ports:
        - containerPort: 8000
