notejam-app/notejam-db-postgres-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: notejam-db
  namespace: notejam
spec:
  serviceName: "notejam-db"
  replicas: 1
  selector:
    matchLabels:
      app: notejam-db
  template:
    metadata:
      labels:
        app: notejam-db
    spec:
      containers:
        - name: postgres
          image: swapxs/notejam-db
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
