notejam-app/notejam-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notejam-app
  namespace: notejam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notejam-app
  template:
    metadata:
      labels:
        app: notejam-app
    spec:
      containers:
        - name: notejam
          image: swapxs/notejam-xs
          ports:
            - containerPort: 8000
