notejam-app/notejam-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: notejam-app-service
  namespace: notejam
spec:
  selector:
    app: notejam-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
