notejam-app/notejam-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: notejam-db
  namespace: notejam
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: notejam-db
  clusterIP: None
