notejam-app/notejam-ingress-config.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notejam-ingress
  namespace: notejam
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: note.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notejam-service
                port:
                  number: 80
